--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,8 +69,8 @@ jobs:
               -e DATABASE_PASSWORD=${{ secrets.DATABASE_PASSWORD }} \
               -e DATABASE_PORT=${{ secrets.DATABASE_PORT }} \
               -e DATABASE_USERNAME=${{ secrets.DATABASE_USERNAME }} \
-              -e ADMIN_JWT_SECRET=${{ secrets.APP_ADMIN_JWT_SECRET }} \
-              -e API_TOKEN_SALT=${{ secrets.APP_API_TOKEN_SALT }} \
+              -e APP_ADMIN_JWT_SECRET=${{ secrets.APP_ADMIN_JWT_SECRET }} \
+              -e APP_API_TOKEN_SALT=${{ secrets.APP_API_TOKEN_SALT }} \
               -e APP_KEYS=${{ secrets.APP_KEYS }} \
               -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
               -e AWS_ACCESS_SECRET=${{ secrets.AWS_ACCESS_SECRET }} \
