--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^1.1.2",
     "@strapi/plugin-graphql": "4.5.3",
     "@strapi/plugin-i18n": "4.5.3",
+    "@strapi/plugin-seo": "^1.7.7",
     "@strapi/plugin-users-permissions": "4.5.3",
     "@strapi/provider-upload-aws-s3": "^4.5.3",
     "@strapi/strapi": "4.5.3",
