--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "devDependencies": {},
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^1.1.2",
-    "@strapi/plugin-graphql": "4.5.4",
-    "@strapi/plugin-i18n": "4.5.4",
+    "@strapi/plugin-graphql": "4.5.5",
+    "@strapi/plugin-i18n": "4.5.5",
     "@strapi/plugin-seo": "^1.7.7",
-    "@strapi/plugin-users-permissions": "4.5.4",
-    "@strapi/provider-upload-aws-s3": "^4.5.4",
-    "@strapi/strapi": "4.5.4",
-    "pg": "8.6.0"
+    "@strapi/plugin-users-permissions": "4.5.5",
+    "@strapi/provider-upload-aws-s3": "^4.5.5",
+    "@strapi/strapi": "4.5.5",
+    "pg": "8.6.0",
+    "strapi-plugin-import-export-entries": "^1.18.0"
   },
   "author": {
     "name": "A Strapi developer"
