--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "strapi",
+  "name": "tuna",
   "private": true,
-  "version": "1.0.14",
+  "version": "1.0.0",
   "description": "A Strapi application",
   "scripts": {
     "dev": "strapi develop",
@@ -11,14 +11,14 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@_sh/strapi-plugin-ckeditor": "^1.1.2",
-    "@strapi/plugin-graphql": "4.6.0",
-    "@strapi/plugin-i18n": "4.6.0",
+    "@_sh/strapi-plugin-ckeditor": "^1.1.3",
+    "@strapi/plugin-graphql": "4.6.1",
+    "@strapi/plugin-i18n": "4.6.1",
     "@strapi/plugin-seo": "^1.7.7",
-    "@strapi/plugin-users-permissions": "4.6.0",
-    "@strapi/provider-upload-aws-s3": "^4.6.0",
-    "@strapi/strapi": "4.6.0",
-    "pg": "8.6.0",
+    "@strapi/plugin-users-permissions": "4.6.1",
+    "@strapi/provider-upload-aws-s3": "^4.6.1",
+    "@strapi/strapi": "4.6.1",
+    "pg": "8.9.0",
     "strapi-plugin-import-export-entries": "^1.18.0"
   },
   "author": {
